fix sticky with z-index 999

--- a/assets/style.css
+++ b/assets/style.css
@@ -123,6 +123,7 @@ a.color_primary,
     position: sticky;
     top: 0;
     height: 108px;
+    z-index: 999;
 }
 
 .sony img {
